--- a/docs/pages/enterprise/workflow/ssh-approval-slack.mdx
+++ b/docs/pages/enterprise/workflow/ssh-approval-slack.mdx
@@ -289,7 +289,7 @@ The messages should automatically get updated to reflect the action you just cli
 $ tctl request ls
 ```
 
-### TSH User Login and Request Admin Role
+### TSH User Login and Request Role
 
 You can also test the full workflow from the user's perspective using `tsh`:
 
