--- a/docs/pages/desktop-access/introduction.mdx
+++ b/docs/pages/desktop-access/introduction.mdx
@@ -10,7 +10,7 @@ description: Teleport Desktop Access introduction and resources.
   Desktop Access is currently in Preview. Do not use this feature for any critical
   infrastructure and keep a backup option for accessing your desktop hosts.
 
-  Desktop Access Beta:
+  Desktop Access Preview:
 
   - is not compatible with HSM integration.
   - does not support clipboard sharing.
