--- a/docs/pages/desktop-access/reference.mdx
+++ b/docs/pages/desktop-access/reference.mdx
@@ -7,7 +7,7 @@ description: Teleport Desktop Access configuration and CLI reference.
   type="warning"
   title="Warning"
 >
-  Desktop Access is currently in Beta. Do not use this feature for any critical
+  Desktop Access is currently in Preview. Do not use this feature for any critical
   infrastructure and keep a backup option for accessing your desktop hosts.
 </Admonition>
 
@@ -85,10 +85,10 @@ spec:
       environment: ["dev", "stage"]
     
     # Windows user accounts this role can connect as.
-    windows_logins: ["Administrator"]
+    windows_desktop_logins: ["Administrator"]
 ```
 
-It is possible to use wildcards to match any desktop labels.
+It is possible to use wildcards to match all desktop labels.
 
 ## CLI
 
