--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -27,6 +27,9 @@ Teleport is a Certificate Authority and an Access Plane for your infrastructure.
   <Tile icon="database" title="Database Access" href="./database-access/introduction.mdx">
     Secure access to PostgreSQL, MySQL and MongoDB databases.
   </Tile>
+  <Tile icon="desktop" title="Desktop Access" href="./desktop-access/introduction.mdx">
+    Secure browser-based access to desktop environments.
+  </Tile>
   <Tile icon="cloud" title="Cloud" href="./cloud/introduction.mdx">
     Connect your nodes, web apps, kubernetes clusters and databases to Teleport as a service.
   </Tile>
