teleport-event-handler reference

--- a/docs/pages/setup/guides/fluentd.mdx
+++ b/docs/pages/setup/guides/fluentd.mdx
@@ -279,4 +279,5 @@ INFO[0046] Event sent id=0b5f2a3e-faa5-4d77-ab6e-362bca0994fc ts="2021-06-08 11:
 
 ## Next Steps
 
+- Full list of supported [configuration options](https://goteleport.com/docs/setup/reference/fluentd/).
 - Read more about [impersonation](https://goteleport.com/docs/access-controls/guides/impersonation/) here.
