--- a/docs/pages/setup/guides/terraform-provider.mdx
+++ b/docs/pages/setup/guides/terraform-provider.mdx
@@ -150,7 +150,7 @@ Create a `main.tf` terraform file:
 
 ```
 terraform {
-  required_version = ">=1.0.0"
+  required_version = ">=(=terraform.version=)"
   required_providers {
     teleport = {
       version = ">= (=teleport.version=)"
