--- a/docs/pages/setup/reference.mdx
+++ b/docs/pages/setup/reference.mdx
@@ -35,4 +35,7 @@ layout: tocless-doc
   <li>
     [License](./reference/license.mdx). Enterprise license file.
   </li>
+  <li>
+    [Configuring fluentd](./reference/fluentd.mdx). Fluentd configuration options reference.
+  </li>
 </ul>
