Added email plugin instructions

--- a/docs/pages/enterprise/workflow/index.mdx
+++ b/docs/pages/enterprise/workflow/index.mdx
@@ -11,6 +11,7 @@ h1: Teleport Access Requests
 - [Integrating Teleport with Jira Cloud](ssh-approval-jira-cloud.mdx)
 - [Integrating Teleport with Jira Server](ssh-approval-jira-server.mdx)
 - [Integrating Teleport with PagerDuty](ssh-approval-pagerduty.mdx)
+- [Integrating Teleport with Email](ssh-approval-email.mdx)
 
 ## Access Requests Setup
 
