--- a/docs/pages/application-access/guides/aws-console.mdx
+++ b/docs/pages/application-access/guides/aws-console.mdx
@@ -245,25 +245,36 @@ username which you can search for to get the events history:
 
 ![CloudTrail](../../../img/application-access/cloud-trail.png)
 
-## Accessing AWS resource using tsh aws cli command
+## Step 8. Using AWS CLI
 
-First, you need to log-in into the previously configured AWS console app:
+First, log into the previously configured AWS console app:
 
 ```code
-tsh app login --aws-role ExamplePowerUser awsconsole
-Logged into AWS app awsconsole. Example AWS cli command:
+$ tsh app login --aws-role ExamplePowerUser awsconsole-test
+Logged into AWS app awsconsole-test. Example AWS CLI command:
 
-tsh aws s3 ls
+$ tsh aws s3 ls
 ```
 
-The `--aws-role` allows to specify the user role that will be used during accessing AWS API. You can either
-provide only a role name like `--aws-role ExamplePowerUser` or full AWS IAM role ARN `arn:aws:iam::1234567890:role/ExamplePowerUser`
+The `--aws-role` flag allows to specify the AWS IAM role to assume when accessing AWS API. You can either
+provide a role name like `--aws-role ExamplePowerUser` or a full role ARN `arn:aws:iam::1234567890:role/ExamplePowerUser`
 
 Now you can use the `tsh aws` command like the native `aws` command-line tool:
 
 ```code
-tsh aws s3 ls
+$ tsh aws s3 ls
 ```
+
+<Admonition type="note" title="Note">
+    The `aws` command-line tool should be available in PATH
+</Admonition>
+
+To log out of the aws application and remove credentials:
+
+```code
+$ tsh app logout awsconsole-test
+```
+
 
 ## Next steps
 
