add routing_strategy to config docs

--- a/docs/pages/config-reference.mdx
+++ b/docs/pages/config-reference.mdx
@@ -277,6 +277,10 @@ auth_service:
     # you'll need to change this.
     # session_control_timeout: 2m
 
+    # Determines the routing strategy used to connect to nodes. Can be
+    # 'unambiguous_match' (default), or 'most_recent'.
+    routing_strategy: unambiguous_match
+
     # License file to start auth server with. Note that this setting is ignored
     # in the Teleport Open-Source Edition and is required only for Teleport Pro, Business
     # and Enterprise subscription plans.
