--- a/docs/pages/application-access/guides/aws-console.mdx
+++ b/docs/pages/application-access/guides/aws-console.mdx
@@ -15,6 +15,7 @@ This guide will explain how to:
 - Setup example AWS IAM Read Only and Power User roles.
 - Use Teleport's role-based access control with AWS IAM roles.
 - View Teleport users' AWS console activity in CloudTrail.
+- AWS command line tool [Installing the AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-install.html)
 
 ## Prerequisites
 
@@ -243,6 +244,37 @@ Each Teleport federated login session uses Teleport username as the federated
 username which you can search for to get the events history:
 
 ![CloudTrail](../../../img/application-access/cloud-trail.png)
+
+## Step 8. Using AWS CLI
+
+First, log into the previously configured AWS console app:
+
+```code
+$ tsh app login --aws-role ExamplePowerUser awsconsole-test
+Logged into AWS app awsconsole-test. Example AWS CLI command:
+
+$ tsh aws s3 ls
+```
+
+The `--aws-role` flag allows to specify the AWS IAM role to assume when accessing AWS API. You can either
+provide a role name like `--aws-role ExamplePowerUser` or a full role ARN `arn:aws:iam::1234567890:role/ExamplePowerUser`
+
+Now you can use the `tsh aws` command like the native `aws` command-line tool:
+
+```code
+$ tsh aws s3 ls
+```
+
+<Admonition type="note" title="Note">
+    The `aws` command-line tool should be available in PATH
+</Admonition>
+
+To log out of the aws application and remove credentials:
+
+```code
+$ tsh app logout awsconsole-test
+```
+
 
 ## Next steps
 
