--- a/docs/pages/setup/reference/config.mdx
+++ b/docs/pages/setup/reference/config.mdx
@@ -34,7 +34,6 @@ teleport:
 
     # Invitation token or file path containing token used to join a cluster. it is not used on
     # subsequent starts.  
-    # 
     # File path example:
     # auth_token: /var/lib/teleport/tokenjoin
     
@@ -52,8 +51,9 @@ teleport:
     advertise_ip: 10.1.0.5
     
     
-    # Teleport provides HTTP endpoints for monitoring purposes. They are disabled by default, but you can enable them using the 
-    # diagnosis address. See the Teleport Metrics of the Reference Manual (https://goteleport.com/docs/setup/reference/metrics/)
+    # Teleport provides HTTP endpoints for monitoring purposes. They are disabled by default
+    #, but you can enable them using the diagnosis address. See the Teleport Metrics of the 
+    # Reference Manual (https://goteleport.com/docs/setup/reference/metrics/)
     diag_addr: "127.0.0.1:3000"
 
     # Auth Server address and port to connect to. If you configure teleport auth to run in High
