--- a/docs/pages/setup/reference/config.mdx
+++ b/docs/pages/setup/reference/config.mdx
@@ -33,8 +33,7 @@ teleport:
     #pid_file: /var/run/teleport.pid
 
     # Invitation token or file path containing token used to join a cluster. it is not used on
-    # subsequent starts.  
-    # 
+    # subsequent starts.
     # File path example:
     # auth_token: /var/lib/teleport/tokenjoin    
     auth_token: xxxx-token-xxxx
@@ -50,8 +49,9 @@ teleport:
     # This value can be specified as FQDN e.g. host.example.com
     advertise_ip: 10.1.0.5
     
-    # Teleport provides HTTP endpoints for monitoring purposes. They are disabled by default, but you can enable them using the 
-    # diagnosis address. See the Teleport Metrics of the Reference Manual (https://goteleport.com/docs/setup/reference/metrics/)
+    # Teleport provides HTTP endpoints for monitoring purposes. They are disabled by 
+    # default, but you can enable them using the diagnosis address. See the Teleport
+    # Metrics of the Reference Manual (https://goteleport.com/docs/setup/reference/metrics/)
     diag_addr: "127.0.0.1:3000"    
 
     # Auth Server address and port to connect to. If you configure teleport auth to run in High
